# plugandpaint

./: meson.build
app/: app.pro  main.cpp  meson.build
plugins/: meson.build
plugins/basictools/: basictools.pro  meson.build
plugins/extrafilters/: meson.build
